[gd_scene load_steps=22 format=2]

[ext_resource path="res://game/ui/Fader.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/BagCounter.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/themes/general_theme/general_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/ui/book/book3.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/book/divisor_no_border.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/book/book2.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/book/book1.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/book/Label Red Disabled.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/book/icon_recipe_list.png" type="Texture" id=10]
[ext_resource path="res://game/recipe-book/FilterMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/images/ui/book/Label Red.png" type="Texture" id=12]
[ext_resource path="res://game/main-menu/RecipeCompendium.gd" type="Script" id=13]
[ext_resource path="res://assets/images/ui/book/Label Red Hover.png" type="Texture" id=14]
[ext_resource path="res://assets/fonts/font-data/font-lore.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/images/ui/book/bookshaderypart_top.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 64
use_mipmaps = true
use_filter = true
extra_spacing_top = -30
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool invert = false;
uniform float top_offset : hint_range(0, 1);
uniform float bottom_offset : hint_range(0, 1);
uniform float right_margin : hint_range(0, 1);

void fragment(){
	COLOR = texture(TEXTURE, UV);
	if (UV.x <= 1.0 - right_margin) {
		if (invert){
			if (UV.y < bottom_offset){
				COLOR.a = 0.0
			}else {
				COLOR.a = 1.0 - smoothstep(bottom_offset, 1.0 - top_offset, UV.y);
			}
		}
		else {
			if (UV.y > 1.0 - bottom_offset){
				COLOR.a = 0.0
			}else {
				COLOR.a = smoothstep(top_offset, 1.0 - bottom_offset, UV.y);
			}
		}
	}
	else {
		COLOR.a = 0.0;
	}
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/invert = true
shader_param/top_offset = 0.0
shader_param/bottom_offset = 0.375
shader_param/right_margin = 0.085

[sub_resource type="DynamicFont" id=4]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 15 )

[node name="RecipeCompendium" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 910.0
margin_right = 910.0
mouse_filter = 2
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -540.0
margin_right = 818.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="TextureRect" parent="Background"]
modulate = Color( 0, 0, 0, 0.584314 )
margin_left = -807.0
margin_top = 30.0
margin_right = 915.0
margin_bottom = 1114.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Part1" type="TextureRect" parent="Background/Shadow"]
margin_left = -36.0
margin_top = -9.0
margin_right = 1686.0
margin_bottom = 1071.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Book3" type="TextureRect" parent="Background"]
margin_left = -870.0
margin_right = 852.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Background"]
margin_left = 800.0
margin_top = 60.0
margin_right = 950.0
margin_bottom = 158.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 14 )
texture_disabled = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="TextureRect" parent="Background/CloseButton"]
modulate = Color( 0, 0, 0, 0.584314 )
show_behind_parent = true
margin_left = 9.0
margin_top = 10.0
margin_right = 159.0
margin_bottom = 108.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -2.00015
margin_right = 52.0
margin_bottom = 63.9998
custom_fonts/font = ExtResource( 3 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Book2" type="TextureRect" parent="Background"]
margin_left = -870.0
margin_right = 852.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Book1" type="TextureRect" parent="Background"]
margin_left = -870.0
margin_right = 852.0
margin_bottom = 1084.0
mouse_filter = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Background"]
margin_left = 67.2957
margin_top = 100.969
margin_right = 155.296
margin_bottom = 167.969
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Background"]
margin_left = 180.0
margin_top = 105.0
margin_right = 489.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "COMPENDIUM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
margin_left = 5.10858
margin_top = 209.882
margin_right = 705.109
margin_bottom = 929.882
rect_min_size = Vector2( 700, 580 )
size_flags_horizontal = 6
theme = ExtResource( 4 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeGrid" type="GridContainer" parent="Background/ScrollContainer"]
margin_left = 700.0
margin_right = 700.0
size_flags_horizontal = 10
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="FilterMenu" parent="Background" instance=ExtResource( 11 )]
margin_left = 508.724
margin_top = 119.183
margin_right = -309.276
margin_bottom = -960.817

[node name="Fader" parent="Background" instance=ExtResource( 1 )]
default_shader_offset = 0.56

[node name="TopFader" parent="Background" instance=ExtResource( 1 )]
material = SubResource( 3 )
margin_left = -7.0
margin_top = 92.0
margin_right = 738.0
margin_bottom = 360.0
texture = ExtResource( 16 )
default_shader_offset = 0.56

[node name="UpperDivider" type="TextureRect" parent="Background"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 75.5304
margin_top = 169.847
margin_right = 715.53
margin_bottom = 229.847
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoreText" type="Label" parent="."]
margin_left = -714.0
margin_top = 189.0
margin_right = -248.0
margin_bottom = 283.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -29
custom_fonts/font = SubResource( 4 )
text = "COMPENDIUM_LORE_HEADER"

[node name="Core" type="Label" parent="LoreText"]
margin_top = 102.0
margin_right = 540.0
margin_bottom = 618.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -24
custom_fonts/font = SubResource( 5 )
text = "COMPENDIUM_LORE_TEXT"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Background/CloseButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Background/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="filters_updated" from="Background/FilterMenu" to="." method="_on_FilterMenu_filters_updated"]

[editable path="Background/TopFader"]
